# bge-private-sdk

./: .gitignore  Makefile  setup.cfg
docs/: README.md  _sidebar.md  index.html
docs/python_sdk/: abundance.md  batch.md  collection.md  data_element.md  data_item.md  oauth2.md  others.md  quickstart.md  sample.md  search.md  service.md  stream.md  survey.md  user.md  variant.md
private_sdk/: __init__.py  client.py  constants.py  http.py  models.py  signature.py  utils.py
