[metadata]
name = bge-private-sdk
version = 0.1a1
description = 可用于调用 BGE 私有平台的相关接口。
long_description = file: README.md
long-description-content-type = text/markdown
url = https://github.com/teambge/bge-private-sdk.git
author = leafcoder,xiangji1204
author_email = leafcoder@gmail.com,xiangji@genomics.cn
license = MIT
license_file = LICENSE
keywords = bge-private-sdk bge private_sdk private
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: Chinese (Simplified)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
[options]
include_package_data = true
packages = find:
[options.entry_points]
console_scripts =
    bge = private_sdk.__main__:main